--- a/css/index.css
+++ b/css/index.css
@@ -241,6 +241,47 @@ nav ul {
   color: #ff0000;
 }
 
+/*style pour le quizz*/
+body {
+  font-family: sans-serif;
+  background-color: #c8c2bf;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px #999;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h2 {
+  margin-top: 50px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+input[type="radio"] {
+  margin-right: 10px;
+}
+
+input[type="submit"] {
+  display: block;
+  margin-top: 30px;
+  font-size: 18px;
+  background-color: #008000;
+  color: #ffffff;
+}
+
 /* Style pour le footer */
 
 footer {
