--- a/css/histoire.css
+++ b/css/histoire.css
@@ -172,6 +172,83 @@
         background-color: #666;
     }
 
+    /* style body */
+
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        margin-top: 5%;
+    }
+
+    .ronds {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15%;
+    }
+
+    .rond {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .rond img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    div.rond {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 10px;
+    }
+
+    div.rond img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+
+    div.rond span {
+
+        text-align: center;
+    }
+
+    .texte {
+        display: flex;
+        justify-content: center;
+    }
+
+    .rectangle {
+        width: 600px;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px #999;
+        text-align: center;
+        margin-bottom: 5%;
+    }
+
+    h1 {
+        margin-bottom: 20px;
+    }
+
+    .rectangle p {
+        line-height: 1.5;
+    }
+
 
     /* Style pour le footer */
 
