--- a/css/histoire.css
+++ b/css/histoire.css
@@ -1,4 +1,4 @@
-    /* Style de base pour la page */
+      /* Style de base pour la page */
 
     body {
         font-family: Arial, sans-serif;
@@ -180,11 +180,71 @@
         padding: 0;
     }
 
+    /* Style titre */
+    @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
+    .Notre-histoire {
+        font-size: 15px; 
+        font-family: Arial, sans-serif; 
+        text-align: center;
+
+    }
+    
+    .Notre-histoire h2 {
+    color: #fff;
+    font-size: 8em;
+    position: absolute;
+    transform: translate(40%, 10%);
+    }
+    
+    .Notre-histoire h2:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px #000000;
+    }
+    
+    .Notre-histoire h2:nth-child(2) {
+    color: #000000;
+    animation: animate 4s ease-in-out infinite;
+    }
+    
+    @keyframes animate {
+    0%,
+    100% {
+        clip-path: polygon(
+        0% 45%,
+        16% 44%,
+        33% 50%,
+        54% 60%,
+        70% 61%,
+        84% 59%,
+        100% 52%,
+        100% 100%,
+        0% 100%
+        );
+    }
+    
+    50% {
+        clip-path: polygon(
+        0% 60%,
+        15% 65%,
+        34% 66%,
+        51% 62%,
+        67% 50%,
+        84% 45%,
+        100% 46%,
+        100% 100%,
+        0% 100%
+        );
+    }
+    }
+    
+    /* Style trombinoscope */
+
     .container {
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
-        margin-top: 5%;
+        margin-top: 13%;
     }
 
     .ronds {
@@ -197,10 +257,14 @@
         width: 100px;
         height: 100px;
         border-radius: 50%;
-
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .rond img:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 0px 5px 0px #ccc;
     }
 
     .rond img {
@@ -223,33 +287,278 @@
     }
 
     div.rond span {
-
         text-align: center;
     }
 
 
-    .texte {
+    /* Style premier rectangle */
+
+    .texte1_1 {
         display: flex;
         justify-content: center;
     }
 
-    .rectangle {
+    .rectangle1 {
         width: 600px;
         padding: 20px;
         background-color: #fff;
         box-shadow: 0px 0px 10px #999;
         text-align: center;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        transition: all 0.2s ease-in-out;
         margin-bottom: 5%;
+        margin-left: 11%;
+    }
+      
+    .rectangle1:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px 0px #ccc;
+    }
+    
+    .rectangle1 h1 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    }
+    
+    .rectangle1 p {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 0;
     }
 
-    h1 {
-        margin-bottom: 20px;
-    }
+    .rectangle1 li {
+        padding: 5px 0;
+        border-bottom: 1px solid #ddd;
+      }
+      
+    .rectangle1 li:last-child {
+        border-bottom: none;
+      }
 
-    .rectangle p {
+
+    .rectangle1 p {
         line-height: 1.5;
     }
 
+    .texte1_2 {
+        display: flex;
+        justify-content: center;
+    }
+
+    .rectangle2 {
+        width: 600px;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px #999;
+        text-align: center;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        transition: all 0.2s ease-in-out;
+        margin-bottom: 5%;
+    }
+      
+    .rectangle2:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px 0px #ccc;
+    }
+    
+    .rectangle2 h1 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    }
+    
+    .rectangle2 p {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 0;
+    }
+
+    .rectangle2 li {
+        padding: 5px 0;
+        border-bottom: 1px solid #ddd;
+    }
+      
+    .rectangle2 li:last-child {
+        border-bottom: none;
+    }
+
+
+    .rectangle2 p {
+        line-height: 1.5;
+    }
+
+
+    /* Style uc1 */
+
+    .undercontainer1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        margin-top: 5%;
+    }
+
+    .texte2 {
+        display: flex;
+        margin-right: 10%;
+    }
+
+    .undercontainer1 img {
+        max-width: 50%;
+        height: auto;
+        margin-left: 10%;
+      }
+
+
+    .uc1rectangle {
+        width: 600px;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px #999;
+        text-align: center;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        transition: all 0.2s ease-in-out;
+        margin-bottom: 5%;
+    }
+      
+    .uc1rectangle:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px 0px #ccc;
+    }
+    
+    .uc1rectangle h1 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    }
+    
+    .uc1rectangle p {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 0;
+    }
+
+    .uc1rectangle li {
+        padding: 5px 0;
+        border-bottom: 1px solid #ddd;
+      }
+      
+    .uc1rectangle li:last-child {
+        border-bottom: none;
+      }
+
+
+    .uc1rectangle p {
+        line-height: 1.5;
+    }
+
+    .uc1undercontainer1 img {
+        max-width: 50%;
+        height: auto;
+        margin-left: 10%;
+      }
+
+      /* Style uc2 */
+
+    .undercontainer2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        margin-top: 5%;
+    }
+
+    .undercontainer2 img {
+        max-width: 70%;
+        height: auto;
+        margin-right: 10%;
+      }
+
+    .texte3 {
+        display: flex;
+        margin-left: 10%;
+    }
+
+    .uc2rectangle {
+        width: 600px;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px #999;
+        text-align: center;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        transition: all 0.2s ease-in-out;
+        margin-bottom: 5%;
+    }
+
+    .uc2rectangle:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 0px 5px 0px #ccc;
+    }
+
+    .uc2rectangle h1 {
+        margin-bottom: 20px;
+    }
+
+    .uc2rectangle p {
+        line-height: 1.5;
+    }
+
+    /* Style uc3 */
+
+    .undercontainer3 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        margin-top: 5%;
+    }
+
+    .texte4 {
+        display: flex;
+        margin-left: 10%;
+    }
+
+    .uc3rectangle {
+        width: 600px;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px #999;
+        text-align: center;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        transition: all 0.2s ease-in-out;
+        margin-bottom: 5%;
+    }
+
+    .uc3rectangle:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 0px 5px 0px #ccc;
+    }
+
+    .uc3rectangle h1 {
+        margin-bottom: 20px;
+    }
+
+    .uc3rectangle p {
+        line-height: 1.5;
+    }
+
+    .undercontainer3 img {
+        max-width: 50%;
+        height: auto;
+        margin-left: 10%;
+      }
 
     /* Style pour le footer */
 
