--- a/siteapp2/css/nespacegestionnaire.css
+++ b/siteapp2/css/nespacegestionnaire.css
@@ -80,7 +80,10 @@ button {
 button {
   background-color: #008CBA;
 }
-
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
 .result,
 .result2,
 .result3,
