--- a/siteapp2/css/nhistoire.css
+++ b/siteapp2/css/nhistoire.css
@@ -69,40 +69,6 @@ header {
 }
 
 
-/*barre de recherche*/
-
-.search-container {
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
-
-.search-icon {
-    font-size: 24px;
-    cursor: pointer;
-
-    /* Augmente le z-index pour que l'icône reste au-dessus de la barre de recherche */
-    display: flex;
-    align-items: center;
-}
-
-input[type="text"] {
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    opacity: 0;
-    z-index: 1;
-    transition: opacity 0.3s ease-in-out;
-    /* Ajoute une transition pour l'opacité */
-}
-
-.search-container:hover input[type="text"],
-input[type="text"].visible {
-    opacity: 1;
-    /* Affiche la barre de recherche lorsque la souris survole le conteneur ou lorsqu'elle contient du texte */
-}
 
 nav ul {
     list-style: none;
@@ -113,6 +79,9 @@ nav ul {
 
 .superbounce a {
     margin-left: 40px;
+    margin-right: 20px;
+    font-size: 30px;
+
     color: #333;
     text-decoration: none;
     font-weight: bold;
@@ -122,6 +91,9 @@ nav ul {
 
 .superbounce2 a {
     margin-left: 40px;
+    margin-right: 20px;
+    font-size: 30px;
+
     color: #333;
     text-decoration: none;
     font-weight: bold;
@@ -184,28 +156,33 @@ nav ul {
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 .Notre-histoire {
+
     font-size: 15px;
     font-family: Arial, sans-serif;
     text-align: center;
-    max-width: 80%; /* Limite la largeur à 80% de l'écran */
     margin: 0 auto; /* Centrer horizontalement */
     padding: 2rem; /* Ajoute un peu d'espace autour du contenu */
+    display: flex; /* Utilise une mise en page flexbox */
+    justify-content: center; /* Centre horizontalement */
 }
 
 
 .Notre-histoire h2 {
+    
 color: #fff;
 font-size: 8em;
-position: absolute;
 transform: translate(40%, 10%);
+
 }
 
 .Notre-histoire h2:nth-child(1) {
+    
 color: transparent;
 -webkit-text-stroke: 2px #000000;
 }
 
 .Notre-histoire h2:nth-child(2) {
+    
 color: #000000;
 animation: animate 4s ease-in-out infinite;
 }
@@ -325,7 +302,7 @@ margin-bottom: 20px;
 }
 
 .rectangle1 p {
-font-size: 1rem;
+font-size: 1.5rem;
 line-height: 1.5;
 margin: 0;
 }
@@ -372,8 +349,8 @@ margin-bottom: 20px;
 }
 
 .rectangle2 p {
-font-size: 1rem;
-line-height: 1.5;
+    font-size: 1.5rem;
+    line-height: 1.5;
 margin: 0;
 }
 
@@ -387,9 +364,6 @@ margin: 0;
 }
 
 
-.rectangle2 p {
-    line-height: 1.5;
-}
 
 
 /* Style uc1 */
@@ -440,8 +414,8 @@ margin-bottom: 20px;
 }
 
 .uc1rectangle p {
-font-size: 1rem;
-line-height: 1.5;
+    font-size: 1.5rem;
+    line-height: 1.5;
 margin: 0;
 }
 
@@ -512,6 +486,8 @@ margin: 0;
 
 .uc2rectangle p {
     line-height: 1.5;
+    font-size: 1.5rem;
+
 }
 
 /* Style uc3 */
@@ -555,6 +531,8 @@ margin: 0;
 
 .uc3rectangle p {
     line-height: 1.5;
+    font-size: 1.5rem;
+
 }
 
 .undercontainer3 img {
@@ -574,12 +552,7 @@ footer {
     color: #fff;
 }
 
-.separator {
-    height: 2px;
-    background-color: #fff;
-    width: 100%;
-    margin-bottom: 1%;
-}
+
 
 .social-media div {
     display: inline-flex;
@@ -619,6 +592,8 @@ footer {
 }
 
 .copyright p {
+    height: 2px;
+
     font-size: 0.8rem;
     text-align: center;
 }
