--- a/siteapp2/css/ninscription.css
+++ b/siteapp2/css/ninscription.css
@@ -1,12 +1,18 @@
-a img {
+img {
     display: block;
     width: 15%;
     margin: 0 auto;
     margin-top: 5%;
 }
 
+label{
+    font-size: 1.2rem;
+
+}
+
+
 body {
-    background-image: linear-gradient(rgb(222, 167, 167), rgb(255, 255, 255));
+    background-image: linear-gradient(rgb(171, 222, 167), rgb(255, 255, 255));
     background-repeat: no-repeat;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
@@ -17,7 +23,6 @@ body {
 
 }
 
-/* Bordered form */
 form {
     width: 100%;
     padding: 30px;
@@ -32,15 +37,79 @@ form {
     padding-bottom: 10px;
 }
 
-label{
 
-    font-size: 1.2rem;
-
-}
-/* Full-width inputs */
 
 input[type=text],
-input[type=password] {
+input[type=password],
+input[type=email]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px sol id #000000;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 1.5rem;
+
+}
+
+input[type="checkbox"]:checked,
+input[type="password"] {
+    -webkit-text-security: none;
+
+
+}
+
+input[type="checkbox"] {
+    -webkit-text-security: none;
+      transform: scale(1.5);
+
+
+}
+
+
+
+input[type="password"] {
+    -webkit-text-security: disc;
+
+}
+
+
+input[type=submit],
+input[type="register"] {
+    background: linear-gradient(to right, rgb(147, 254, 143), rgb(145, 145, 145));
+    color: rgb(255, 255, 255);
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    font-size: 1.5rem;
+
+}
+
+input[type=submit]:hover,
+input[type="register"] {
+    background-color: white;
+    color: #ffffff;
+    border: 1px solid #000000;
+    border-radius: 5px;
+}
+
+input[type=text],
+input[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+input[type=text],
+input[type=Adress] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -52,112 +121,45 @@ input[type=password] {
 
 }
 
-input[type="checkbox"]:checked,
-input[type="password"] {
-    -webkit-text-security: none;
-
-}
-
-input[type="password"] {
-    -webkit-text-security: disc;
-
-}
 
 
 
-/* Set a style for all buttons */
 
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-input[type=submit],
-input[type="login"] {
-    background: linear-gradient(to right, rgb(246, 70, 6), orange);
-    color: rgb(255, 255, 255);
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 40%;
-    border-radius: 5px;
-    font-size: 1.5rem;
-
-}
-
-input[type=submit]:hover,
-input[type="login"] {
-    background-color: white;
-    color: #ffffff;
-    border: 1px solid #000000;
-
-}
-
-input[type=submit]:active,
-input[type="login"]:active {
-    box-shadow: 0 1px #707070;
-    transform: translate(5px);
-}
-
-input[type=submit2],
-input[type="oubli"] {
-    background: linear-gradient(to right, rgb(246, 70, 6), orange);
-    color: rgb(255, 255, 255);
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 40%;
-    border-radius: 5px;
-    font-size: 1.5rem;
-    text-align: center;
-
-}
-input[type=submit2]:active,
-input[id=oubli]:hover {
-    color: #ffffff;
-    border: 1px solid #000000;
-
-}
-
-
-.inscrit {
-    display: flex;
-    justify-content: space-around;
-    width: 45%;
-    height: 8%;
-
-}
-
-.inscrit:link {
+a:link {
     color: rgb(0, 0, 0);
 }
 
-.inscrit:visited {
+a:visited {
     color: rgb(255, 131, 60);
 }
 
-.inscrit:hover {
+a:hover {
 
     color: #6477f3;
     border: solid 1px, black;
 }
 
-.inscrit:active {
+a:active {
     color: red;
     border: solid 1px, black;
 
 }
-
-select{
+select {
     display: block;
-    width: 20%;
+    width: 100%;
+    height: 50px;
     padding: 10px;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #f7f7f7;
+    color: #555;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 1.5em;
-}
-
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  }
+  
+  select:focus {
+    outline: none;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  }
+  
