--- a/siteapp2/css/nprofil2.css
+++ b/siteapp2/css/nprofil2.css
@@ -5,32 +5,37 @@ body {
     background-color: #f4f4f4;
 }
 
-.top-bar {
-    background-color: #f35e5e;
+#top-bar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 10px 30px;
+    align-items: center;
+    height: 50px;
+    background-color: #f35e5e;
     color: white;
-    font-size: 1.1em;
+    padding: 10px;
+    
 }
-.top-bar a:hover {
+#top-bar img {
+    height: 40px;
+  }
+#top-bar a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-right: 20px;
+    cursor: pointer;
+    padding: 10px;
+}
+
+#top-bar a:hover {
     background-color: #f59191c9;
     border-radius: 5px;
   }
-.top-bar a {
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    margin-left: 30px;
-}
-.top-bar img {
-    height: 40px;
-  }
 
-  .top-bar span {
-    margin-right: 30px;
-  }
+#top-bar span {
+    font-size: 16px;
+    font-weight: bold;
+}
 .container {
     max-width: 800px;
     margin: 20px auto;
@@ -48,6 +53,8 @@ form {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    font-size: 1.5rem;
+
 }
 
 label {
@@ -58,6 +65,7 @@ label {
 
 input[type="text"],
 input[type="email"],
+select,
 input[type="number"] {
     display: block;
     width: 100%;
@@ -65,7 +73,7 @@ input[type="number"] {
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 3px;
-    font-size: 1em;
+    font-size: 1.5rem;
 }
 
 input[type="submit"] {
@@ -74,7 +82,7 @@ input[type="submit"] {
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
-    font-size: 1em;
+    font-size: 1.5rem;
     cursor: pointer;
 }
 
@@ -91,3 +99,20 @@ input[type="submit"]:hover {
     margin-left: 10px;
 }
 
+
+#user-menu .logout-button {
+    display: none;
+  }
+  
+  #user-menu:hover .logout-button {
+    display: block;
+    margin-top: 10px; /* Ajoutez une marge supérieure pour séparer le bouton du nom d'utilisateur */
+    color: #fff;
+    background-color: #333;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+  }
+  
+
+  
