--- a/siteapp2/css/amdpoubli3.css
+++ b/siteapp2/css/amdpoubli3.css
@@ -3,7 +3,7 @@ body {
   margin-top: 150px;
   font-size: 1.5rem;
 
-    background-image: linear-gradient(rgb(171, 222, 167), rgb(255, 255, 255));
+    background-image: linear-gradient(rgb(255, 176, 28), rgb(255, 255, 255));
     background-repeat: no-repeat;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
@@ -66,7 +66,7 @@ body {
     font-size: 1.5rem;
 
     padding: 20px;
-    background-color: #4caf50;
+    background-color: #f79927;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -74,7 +74,7 @@ body {
   }
   
   input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #ff8112;
   }
   
 
